; ModuleID = '/home/carl/AnghaBench/libgit2/tests/config/extr_read.c_test_config_read__nosection.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/config/extr_read.c_test_config_read__nosection.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_BUF_INIT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [24 x i8] c"config/config-nosection\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"key\00", align 1
@GIT_EINVALIDSPEC = common dso_local global i32 0, align 4
@read_nosection_cb = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_config_read__nosection() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = load i32, i32* @GIT_BUF_INIT, align 4
  store i32 %4, i32* %2, align 4
  store i32 0, i32* %3, align 4
  %5 = call i32 @cl_fixture(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  %6 = call i32 @git_config_open_ondisk(i32** %1, i32 %5)
  %7 = call i32 @cl_git_pass(i32 %6)
  %8 = load i32*, i32** %1, align 8
  %9 = call i32 @git_config_get_string_buf(i32* %2, i32* %8, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0))
  %10 = load i32, i32* @GIT_EINVALIDSPEC, align 4
  %11 = call i32 @cl_git_fail_with(i32 %9, i32 %10)
  %12 = load i32*, i32** %1, align 8
  %13 = load i32, i32* @read_nosection_cb, align 4
  %14 = call i32 @git_config_foreach(i32* %12, i32 %13, i32* %3)
  %15 = call i32 @cl_git_pass(i32 %14)
  %16 = load i32, i32* %3, align 4
  %17 = call i32 @cl_assert_equal_i(i32 %16, i32 1)
  %18 = call i32 @git_buf_dispose(i32* %2)
  %19 = load i32*, i32** %1, align 8
  %20 = call i32 @git_config_free(i32* %19)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_config_open_ondisk(i32**, i32) #1

declare dso_local i32 @cl_fixture(i8*) #1

declare dso_local i32 @cl_git_fail_with(i32, i32) #1

declare dso_local i32 @git_config_get_string_buf(i32*, i32*, i8*) #1

declare dso_local i32 @git_config_foreach(i32*, i32, i32*) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1

declare dso_local i32 @git_buf_dispose(i32*) #1

declare dso_local i32 @git_config_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
